# Enpitsu

./: CLAUDE.md  Cargo.toml  README.md
installer/: install.ps1
plan/: README.md  cursor-movement.md  investigation-ontestkeydown.md  phase4-implementation.md  phase4-tsf.md  phase5-implementation.md  phase6-implementation.md  phase6-polish.md  phase8-ai-dict.md  specification.md
src/: config.rs  dictionary.rs  engine.rs  guids.rs  input_state.rs  key_mapping.rs  lib.rs  main.rs  registry.rs  text_service.rs  user_dictionary.rs
